frontend/kube-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trivia-frontend
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: trivia-frontend
