frontend/kube-resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trivia-frontend
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing

spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: trivia-frontend
              servicePort: 80
